margo/src/layout/snapshots/margo__layout__snapshot_tests__deck_two_windows.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&deck(&ctx))
---
 0  x=8      y=8      w=1047   h=1064
 1  x=1063   y=8      w=849    h=1064
