margo/src/layout/snapshots/margo__layout__snapshot_tests__monocle_three_windows_all_same_rect.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&monocle(&ctx))
---
 0  x=8      y=8      w=1904   h=1064
 1  x=8      y=8      w=1904   h=1064
 2  x=8      y=8      w=1904   h=1064
