margo/src/layout/snapshots/margo__layout__snapshot_tests__right_tile_two_windows.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&arranged)
---
 0  x=865    y=8      w=1047   h=1064
 1  x=8      y=8      w=849    h=1064
