margo/src/layout/snapshots/margo__layout__snapshot_tests__scroller_focus_center_off_anchors_to_left.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&scroller(&ctx))
---
 0  x=-2784  y=8      w=1491   h=1064
 1  x=-1285  y=8      w=1491   h=1064
 2  x=214    y=8      w=1491   h=1064
