margo/src/layout/snapshots/margo__layout__snapshot_tests__scroller_three_windows_focus_centered.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&arranged)
---
 0  x=-1285  y=8      w=1491   h=1064
 1  x=214    y=8      w=1491   h=1064
 2  x=1713   y=8      w=1491   h=1064
