margo/src/layout/snapshots/margo__layout__snapshot_tests__tgmix_five_windows.snap
---
source: margo/src/layout/snapshot_tests.rs
expression: format_arranged(&tgmix(&ctx))
---
 0  x=8      y=8      w=1047   h=1064
 1  x=1063   y=8      w=420    h=528
 2  x=1491   y=8      w=420    h=528
 3  x=1063   y=544    w=420    h=528
 4  x=1491   y=544    w=420    h=528
